examples/test/testpolicy7709.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7709
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key21: value13
      key25: value2
      key33: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value49
      podSelector:
        matchLabels:
          key17: value19
